    The docs have been updated to reflect this.

  - The copies of BFG's ``meta.zcml`` and ``configure.zcml`` were
    removed from the root of the ``repoze.bfg`` package.  In 0.3.6, a
    new package named ``repoze.bfg.includes`` was added, which
    contains the "correct" copies of these ZCML files; the ones that
    were removed were for backwards compatibility purposes.

  Other

  - The minimum requirement for ``chameleon.core`` is now 1.0b13.  The
    minimum requirement for ``chameleon.zpt`` is now 1.0b7.  The
    minimum requirement for ``chameleon.genshi`` is now 1.0b2.

  - Updated paster template "ez_setup.py" to one that requires
    setuptools 0.6c9.

  - Turn ``view_execution_permitted`` from the :mod:`repoze.bfg.view`
    module into a documented API.

  - Doc cleanups.

  - Documented how to create a view capable of serving static
    resources.

0.5.6 (12/18/2008)

  - Speed up ``traversal.model_url`` execution by using a custom url
    quoting function instead of Python's ``urllib.quote``, by caching
    URL path segment quoting and encoding results, by disusing
    Python's ``urlparse.urljoin`` in favor of a simple string
    concatenation, and by using ``ob.__class__ is unicode`` rather
    than ``isinstance(ob, unicode)`` in one strategic place.

0.5.5 (12/17/2008)

  Backwards Incompatibilities

  - In the past, during traversal, the ModelGraphTraverser (the
    default traverser) always passed each URL path segment to any
    ``__getitem__`` method of a model object as a byte string (a
    ``str`` object).  Now, by default the ModelGraphTraverser attempts
    to decode the path segment to Unicode (a ``unicode`` object) using
    the UTF-8 encoding before passing it to the ``__getitem__`` method
    of a model object.  This makes it possible for model objects to be
    dumber in ``__getitem__`` when trying to resolve a subobject, as
    model objects themselves no longer need to try to divine whether